PCI8154/Library/Include/pci_8154.h

/*
I16 FNTYPE _8154_tv_line2(I16 *AxisArray, F64 StrVel, F64 MaxVel, F64 Tacc);
I16 FNTYPE _8154_sv_line2(I16 *AxisArray,  F64 StrVel, F64 MaxVel, F64 Tacc, F64 SVacc);
*/

//Circular Interpolation Motion Section 6.8
  // Two Axes Arc Interpolation function
I16 FNTYPE _8154_start_tr_arc_xy(I16 CardId, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec);
I16 FNTYPE _8154_start_ta_arc_xy(I16 CardId, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec);
I16 FNTYPE _8154_start_sr_arc_xy(I16 CardId, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec,F64 SVacc,F64 SVdec);
I16 FNTYPE _8154_start_sa_arc_xy(I16 CardId, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec,F64 SVacc,F64 SVdec);
I16 FNTYPE _8154_start_tr_arc_zu(I16 CardId, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec);
I16 FNTYPE _8154_start_ta_arc_zu(I16 CardId, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec);
I16 FNTYPE _8154_start_sr_arc_zu(I16 CardId, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec,F64 SVacc,F64 SVdec);
I16 FNTYPE _8154_start_sa_arc_zu(I16 CardId, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec,F64 SVacc,F64 SVdec);
I16 FNTYPE _8154_start_tr_arc2(I16 *AxisArray, F64 *OffsetCenter, F64 *OffsetEnd, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec);
I16 FNTYPE _8154_start_ta_arc2(I16 *AxisArray, F64 *CenterPos, F64 *EndPos, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec);
I16 FNTYPE _8154_start_sr_arc2(I16 *AxisArray, F64 *OffsetCenter, F64 *OffsetEnd, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec, F64 SVacc,F64 SVdec);
I16 FNTYPE _8154_start_sa_arc2(I16 *AxisArray, F64 *CenterPos, F64 *EndPos, I16 CW_CCW, F64 StrVel,F64 MaxVel,F64 Tacc,F64 Tdec, F64 SVacc,F64 SVdec);
//Helical Interpolation Motion Section 6.9
I16 FNTYPE _8154_start_tr_helical(I16 card_id, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, F64 PitchDist, I16 CW_CCW, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_ta_helical(I16 card_id, F64 Cx, F64 Cy, F64 Ex, F64 Ey, F64 PitchPos, I16 CW_CCW, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_start_sr_helical(I16 card_id, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, F64 PitchDist, I16 CW_CCW, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_start_sa_helical(I16 card_id, F64 Cx, F64 Cy, F64 Ex, F64 Ey, F64 PitchPos, I16 CW_CCW, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
//Home Return Mode Section 6.10
I16 FNTYPE _8154_set_home_config(I16 AxisNo, I16 home_mode, I16 org_logic, I16 ez_logic, I16 ez_count, I16 erc_out);
I16 FNTYPE _8154_home_move(I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc);
I16 FNTYPE _8154_home_search(I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc, F64 ORGOffset);
//Manual Pulser Motion Section 6.11
I16 FNTYPE _8154_set_pulser_iptmode(I16 AxisNo, I16 InputMode, I16 Inverse);
I16 FNTYPE _8154_disable_pulser_input(I16 AxisNo, U16 Disable );
I16 FNTYPE _8154_pulser_vmove(I16 AxisNo, F64 SpeedLimit);
I16 FNTYPE _8154_pulser_pmove(I16 AxisNo, F64 Dist, F64 SpeedLimit);
I16 FNTYPE _8154_set_pulser_ratio(I16 AxisNo, I16 DivF, I16 MultiF);
//Motion Status Section 6.12
I16 FNTYPE _8154_motion_done(I16 AxisNo);
//Motion Interface I/O Section 6.13
I16 FNTYPE _8154_set_servo(I16 AxisNo, I16 on_off);
I16 FNTYPE _8154_set_pcs_logic(I16 AxisNo, I16 pcs_logic);
I16 FNTYPE _8154_set_pcs(I16 AxisNo, I16 enable);
I16 FNTYPE _8154_set_clr_mode(I16 AxisNo, I16 clr_mode, I16 targetCounterInBit);
I16 FNTYPE _8154_set_inp(I16 AxisNo, I16 inp_enable, I16 inp_logic);
I16 FNTYPE _8154_set_alm(I16 AxisNo, I16 alm_logic, I16 alm_mode);
I16 FNTYPE _8154_set_erc(I16 AxisNo, I16 erc_logic, I16 erc_pulse_width, I16 erc_mode);
I16 FNTYPE _8154_set_erc_out(I16 AxisNo);
I16 FNTYPE _8154_clr_erc(I16 AxisNo);
 
I16 FNTYPE _8154_set_sd(I16 AxisNo, I16 sd_logic, I16 sd_latch, I16 sd_mode);
I16 FNTYPE _8154_enable_sd(I16 AxisNo, I16 enable);
I16 FNTYPE _8154_set_limit_logic(I16 AxisNo, I16 Logic );
I16 FNTYPE _8154_set_limit_mode(I16 AxisNo, I16 limit_mode);
I16 FNTYPE _8154_get_io_status(I16 AxisNo, U16 *io_sts);
//Interrupt Control Section 6.14
I16 FNTYPE _8154_int_control(I16 CardId, I16 intFlag);
I16 FNTYPE _8154_wait_error_interrupt(I16 AxisNo, I32 TimeOut_ms );
I16 FNTYPE _8154_wait_motion_interrupt(I16 AxisNo, I16 IntFactorBitNo, I32 TimeOut_ms );
I16 FNTYPE _8154_set_motion_int_factor(I16 AxisNo, U32 int_factor );
//Position Control and Counters Section 6.15
I16 FNTYPE _8154_get_position(I16 AxisNo, F64 *Pos);
I16 FNTYPE _8154_set_position(I16 AxisNo, F64 Pos);
I16 FNTYPE _8154_get_command(I16 AxisNo, I32 *Cmd);
I16 FNTYPE _8154_set_command(I16 AxisNo, I32 Cmd);
I16 FNTYPE _8154_get_error_counter(I16 AxisNo, I16 *error);
I16 FNTYPE _8154_reset_error_counter(I16 AxisNo);
I16 FNTYPE _8154_reset_counter_after_home(I16 AxisNo, I16 EnableByBit);
I16 FNTYPE _8154_set_general_counter(I16 AxisNo, I16 CntSrc, F64 CntValue);
I16 FNTYPE _8154_get_general_counter(I16 AxisNo, F64 *CntValue);
I16 FNTYPE _8154_reset_target_pos(I16 AxisNo, F64 TargetPos);