PCI8154/Library/Include/pci_8154.bas

' */
'
' Circular Interpolation Motion Section 6.8
'  Two Axes Arc Interpolation function
Declare Function B_8154_start_tr_arc_xy Lib "8154.dll" Alias "_8154_start_tr_arc_xy" (ByVal CardId As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_ta_arc_xy Lib "8154.dll" Alias "_8154_start_ta_arc_xy" (ByVal CardId As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_sr_arc_xy Lib "8154.dll" Alias "_8154_start_sr_arc_xy" (ByVal CardId As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sa_arc_xy Lib "8154.dll" Alias "_8154_start_sa_arc_xy" (ByVal CardId As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
Declare Function B_8154_start_tr_arc_zu Lib "8154.dll" Alias "_8154_start_tr_arc_zu" (ByVal CardId As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_ta_arc_zu Lib "8154.dll" Alias "_8154_start_ta_arc_zu" (ByVal CardId As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_sr_arc_zu Lib "8154.dll" Alias "_8154_start_sr_arc_zu" (ByVal CardId As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sa_arc_zu Lib "8154.dll" Alias "_8154_start_sa_arc_zu" (ByVal CardId As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
Declare Function B_8154_start_tr_arc2 Lib "8154.dll" Alias "_8154_start_tr_arc2" (AxisArray As Integer, OffsetCenter As Double, OffsetEnd As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_ta_arc2 Lib "8154.dll" Alias "_8154_start_ta_arc2" (AxisArray As Integer, CenterPos As Double, EndPos As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_sr_arc2 Lib "8154.dll" Alias "_8154_start_sr_arc2" (AxisArray As Integer, OffsetCenter As Double, OffsetEnd As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sa_arc2 Lib "8154.dll" Alias "_8154_start_sa_arc2" (AxisArray As Integer, CenterPos As Double, EndPos As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
' Helical Interpolation Motion Section 6.9
Declare Function B_8154_start_tr_helical Lib "8154.dll" Alias "_8154_start_tr_helical" (ByVal card_ID As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal PitchDist As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_ta_helical Lib "8154.dll" Alias "_8154_start_ta_helical" (ByVal card_ID As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal PitchPos As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_start_sr_helical Lib "8154.dll" Alias "_8154_start_sr_helical" (ByVal card_ID As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal PitchDist As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_start_sa_helical Lib "8154.dll" Alias "_8154_start_sa_helical" (ByVal card_ID As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal PitchPos As Double, ByVal CW_CCW As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
'
' Home Return Mode Section 6.10
Declare Function B_8154_set_home_config Lib "8154.dll" Alias "_8154_set_home_config" (ByVal AxisNo As Integer, ByVal home_mode As Integer, ByVal org_logic As Integer, ByVal ez_logic As Integer, ByVal ez_count As Integer, ByVal erc_out As Integer) As Integer
Declare Function B_8154_home_move Lib "8154.dll" Alias "_8154_home_move" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8154_escape_home Lib "8154.dll" Alias "_8154_escape_home" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8154_home_search Lib "8154.dll" Alias "_8154_home_search" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal ORGOffset As Double) As Integer
'
' Manual Pulser Motion Section 6.11
Declare Function B_8154_set_pulser_iptmode Lib "8154.dll" Alias "_8154_set_pulser_iptmode" (ByVal AxisNo As Integer, ByVal InputMode As Integer, ByVal Inverse As Integer) As Integer
Declare Function B_8154_disable_pulser_input Lib "8154.dll" Alias "_8154_disable_pulser_input" (ByVal AxisNo As Integer, ByVal Disable As Integer) As Integer
Declare Function B_8154_pulser_vmove Lib "8154.dll" Alias "_8154_pulser_vmove" (ByVal AxisNo As Integer, ByVal SpeedLimit As Double) As Integer
Declare Function B_8154_pulser_pmove Lib "8154.dll" Alias "_8154_pulser_pmove" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal SpeedLimit As Double) As Integer
Declare Function B_8154_set_pulser_ratio Lib "8154.dll" Alias "_8154_set_pulser_ratio" (ByVal AxisNo As Integer, ByVal DivF As Integer, ByVal MultiF As Integer) As Integer
'
' Motion Status Section 6.12
Declare Function B_8154_motion_done Lib "8154.dll" Alias "_8154_motion_done" (ByVal AxisNo As Integer) As Integer
'
' Motion Interface I/O Section 6.13
Declare Function B_8154_set_servo Lib "8154.dll" Alias "_8154_set_servo" (ByVal AxisNo As Integer, ByVal on_off As Integer) As Integer
Declare Function B_8154_set_pcs_logic Lib "8154.dll" Alias "_8154_set_pcs_logic" (ByVal AxisNo As Integer, ByVal pcs_logic As Integer) As Integer
Declare Function B_8154_set_pcs Lib "8154.dll" Alias "_8154_set_pcs" (ByVal AxisNo As Integer, ByVal enable As Integer) As Integer
Declare Function B_8154_set_clr_mode Lib "8154.dll" Alias "_8154_set_clr_mode" (ByVal AxisNo As Integer, ByVal clr_mode As Integer, ByVal targetCounterInBit As Integer) As Integer
Declare Function B_8154_set_inp Lib "8154.dll" Alias "_8154_set_inp" (ByVal AxisNo As Integer, ByVal inp_enable As Integer, ByVal inp_logic As Integer) As Integer
Declare Function B_8154_set_alm Lib "8154.dll" Alias "_8154_set_alm" (ByVal AxisNo As Integer, ByVal alm_logic As Integer, ByVal alm_mode As Integer) As Integer
Declare Function B_8154_set_erc Lib "8154.dll" Alias "_8154_set_erc" (ByVal AxisNo As Integer, ByVal erc_logic As Integer, ByVal erc_pulse_width As Integer, ByVal erc_mode As Integer) As Integer
Declare Function B_8154_set_erc_out Lib "8154.dll" Alias "_8154_set_erc_out" (ByVal AxisNo As Integer) As Integer
Declare Function B_8154_clr_erc Lib "8154.dll" Alias "_8154_clr_erc" (ByVal AxisNo As Integer) As Integer
Declare Function B_8154_set_sd Lib "8154.dll" Alias "_8154_set_sd" (ByVal AxisNo As Integer, ByVal sd_logic As Integer, ByVal sd_latch As Integer, ByVal sd_mode As Integer) As Integer
Declare Function B_8154_enable_sd Lib "8154.dll" Alias "_8154_enable_sd" (ByVal AxisNo As Integer, ByVal enable As Integer) As Integer
Declare Function B_8154_set_limit_logic Lib "8154.dll" Alias "_8154_set_limit_logic" (ByVal AxisNo As Integer, ByVal Logic As Integer) As Integer
Declare Function B_8154_set_limit_mode Lib "8154.dll" Alias "_8154_set_limit_mode" (ByVal AxisNo As Integer, ByVal limit_mode As Integer) As Integer
Declare Function B_8154_get_io_status Lib "8154.dll" Alias "_8154_get_io_status" (ByVal AxisNo As Integer, io_sts As Integer) As Integer
'
' Interrupt Control Section 6.14
Declare Function B_8154_int_control Lib "8154.dll" Alias "_8154_int_control" (ByVal CardId As Integer, ByVal intFlag As Integer) As Integer
Declare Function B_8154_wait_error_interrupt Lib "8154.dll" Alias "_8154_wait_error_interrupt" (ByVal AxisNo As Integer, ByVal TimeOut_ms As Long) As Integer
Declare Function B_8154_wait_motion_interrupt Lib "8154.dll" Alias "_8154_wait_motion_interrupt" (ByVal AxisNo As Integer, ByVal IntFactorBitNo As Integer, ByVal TimeOut_ms As Long) As Integer
Declare Function B_8154_set_motion_int_factor Lib "8154.dll" Alias "_8154_set_motion_int_factor" (ByVal AxisNo As Integer, ByVal int_factor As Long) As Integer
'
' Position Control and Counters Section 6.15
Declare Function B_8154_get_position Lib "8154.dll" Alias "_8154_get_position" (ByVal AxisNo As Integer, Pos As Double) As Integer
Declare Function B_8154_set_position Lib "8154.dll" Alias "_8154_set_position" (ByVal AxisNo As Integer, ByVal Pos As Double) As Integer
Declare Function B_8154_get_command Lib "8154.dll" Alias "_8154_get_command" (ByVal AxisNo As Integer, Cmd As Long) As Integer
Declare Function B_8154_set_command Lib "8154.dll" Alias "_8154_set_command" (ByVal AxisNo As Integer, ByVal Cmd As Long) As Integer
Declare Function B_8154_get_error_counter Lib "8154.dll" Alias "_8154_get_error_counter" (ByVal AxisNo As Integer, error As Integer) As Integer
Declare Function B_8154_reset_error_counter Lib "8154.dll" Alias "_8154_reset_error_counter" (ByVal AxisNo As Integer) As Integer
Declare Function B_8154_reset_counter_after_home Lib "8154.dll" Alias "_8154_reset_counter_after_home" (ByVal AxisNo As Integer, ByVal EnableByBit As Integer) As Integer
Declare Function B_8154_set_general_counter Lib "8154.dll" Alias "_8154_set_general_counter" (ByVal AxisNo As Integer, ByVal CntSrc As Integer, ByVal CntValue As Double) As Integer
Declare Function B_8154_get_general_counter Lib "8154.dll" Alias "_8154_get_general_counter" (ByVal AxisNo As Integer, CntValue As Double) As Integer
Declare Function B_8154_reset_target_pos Lib "8154.dll" Alias "_8154_reset_target_pos" (ByVal AxisNo As Integer, ByVal TargetPos As Double) As Integer
